# deveco-cli

./: .gitignore  README.md  pyproject.toml
deveco_cli/: _check_config.py  _cli.py  _config.py  _output.py  _runner.py
deveco_cli/commands/: build.py  check.py  check_daemon.py  emulator.py  hilog.py  start.py  ui_action.py  ui_tree.py
