[project]
name = "deveco-cli"
version = "0.1.0"
description = "DevEco Studio 工具链 CLI — deveco-mcp 的 Python 替代"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16.0",
    "httpx>=0.27.0",
    "rich>=14.0",
]

[project.scripts]
deveco-cli = "deveco_cli._cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deveco_cli"]
